# Changelog
# https://dev.mysql.com/doc/relnotes/connector-j/en/

Version 9.1.0

  - Fix for Bug#96623 (Bug#30221117), batch update with rewriteBatchedStatements&useServerPrepStmts send fail request.

  - Fix for Bug#114705 (Bug#36539680), Contribution: make trustStorePassword be null if this.trustStoreSettings.keyStorePassword is null.
    Thanks to Jesper Blomquist for his contribution.

  - Fix for Bug#84117 (Bug#25247468), includeThreadNamesAsStatementComment ignored when using prepared statement.
    Thanks to Yyjun Yyjun for his contribution.

  - Fix for Bug#101054 (Bug#32544786), Batched Query > maxAllowedPacket size causes an ArrayIndexOutOfBoundsException.

  - Fix for Bug#108415 (Bug#34579258), NullPointerException in AbstractQuery::stopQueryTimer.
    Thanks to Anthony Milbourne for his contribution.

  - Fix for Bug#115265 (Bug#36843227), Second stored procedure call with cacheCallableStmts might fail.

  - Fix for Bug#36936407, PrepareCall method doesn't work as expected when DB name is involved.

  - WL#16490, OpenID Connect authentication support.

  - Fix for Bug#112790 (Bug#35936477), Statement.getGeneratedKeys() returns unexpected value.

  - Fix for Bug#113509 (Bug#36154975), closeOnCompletion cause no statement reuse and server memory leak.

  - Fix for Bug#109418 (Bug#36043556), batch insert threw an unexpected exception.

  - Fix for Bug#114410 (Bug#36434816), Code performance issue.

  - Fix for Bug#110586 (Bug#35254470), got unexpected result when the data type was set to ZEROFILL.

Version 9.0.0

  - WL#16391, Upgrade 3rd party libraries and tools.

  - Fix for Bug#114800 (Bug#36576596), Wrong code by an old patch.

  - Fix for Bug#114846 (Bug#36574322), Auto-closeable X dev session.
    Thanks to Daniel Kec for his contribution.

  - Fix for Bug#114989 (Bug#36612566), Setting null value in setClientInfo throws an NPE.

  - WL#16376, Set 'caching_sha2_password' as default fallback authentication plugin.
